# rblib

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: sanity.yaml
examples/: checkpoint-bundle.rs  checkpoint-bundles.rs  checkpoint-txs.rs  checkpoints-eth.rs  checkpoints-op.rs  custom-bundle-type.rs  custom-platform.rs  hello-world-eth.rs  hello-world-op.rs
grafana/: payload.json
src/: ethereum.rs  lib.rs  optimism.rs
src/payload/: block.rs  checkpoint.rs  ethereum.rs  exec.rs  mod.rs  optimism.rs  platform.rs  span.rs
src/payload/ext/: block.rs  checkpoint.rs  mod.rs  span.rs
src/payload/tests/: api.rs  mod.rs
src/pipeline/: limits.rs  mod.rs  simulated.rs  static.rs  step.rs  tests.rs
src/pipeline/macros/: Cargo.toml
src/pipeline/tests/: mod.rs  steps.rs
src/pipelines/: context.rs  events.rs  exec.rs  iter.rs  job.rs  limits.rs  metrics.rs  mod.rs  service.rs  simulated.rs  static.rs  step.rs
src/pipelines/context/: mod.rs  pool.rs
src/pipelines/exec/: mod.rs  navi.rs  scope.rs
src/pipelines/macros/: Cargo.toml
src/pipelines/macros/src/: lib.rs  variants.rs
src/pipelines/macros/src/metrics/: mod.rs  set.rs
src/pipelines/service/: job.rs  mod.rs
src/pipelines/step/: context.rs  instance.rs  metrics.rs  mod.rs  name.rs
src/pipelines/steps/: builder.rs  mod.rs  optimism.rs  pool.rs  profit.rs  revert.rs
src/pipelines/steps/order/: mod.rs  profit.rs  tip.rs
src/pipelines/steps/pool/: batch.rs  mod.rs  one.rs  stream.rs
src/pipelines/tests/: mod.rs  revert.rs  smoke.rs  steps.rs  syntax.rs
src/pipelines/tests/framework/: accounts.rs  ethereum.rs  local.rs  mod.rs  node.rs  optimism.rs  signer.rs  step.rs  txs.rs  utils.rs
src/pipelines/tests/framework/macros/: Cargo.toml
src/pipelines/tests/framework/macros/src/: lib.rs
src/platform/: bundle.rs  limits.rs  mod.rs  types.rs
src/platform/ethereum/: bundle.rs  limits.rs  mod.rs  pool.rs
src/platform/ext/: bundle.rs  limits.rs  mod.rs
src/platform/optimism/: bundle.rs  limits.rs  mod.rs
src/pool/: backend.rs  host.rs  maintain.rs  mod.rs  native.rs  report.rs  rpc.rs  select.rs  setup.rs  step.rs  steps.rs
src/pool/backend/: mod.rs  setup.rs  status.rs
src/pool/steps/: many.rs  mod.rs  one.rs
src/steps/: builder.rs  mod.rs  optimism.rs  revert.rs  utils.rs
src/steps/order/: mod.rs  profit.rs  tip.rs
src/steps/ordering/: mod.rs  profit.rs  tip.rs
src/steps/pool/: batch.rs  mod.rs  stream.rs
src/test_utils/: accounts.rs  ethereum.rs  exts.rs  mock.rs  mod.rs  node.rs  optimism.rs  platform.rs  step.rs
src/test_utils/artifacts/: op-genesis.json
src/test_utils/exts/: mock.rs  mod.rs
src/test_utils/macros/: Cargo.toml
src/test_utils/macros/src/: lib.rs
