[workspace]
members = [
  ".",       # The main rblib library
  "bin/op2", # Optimism block builder
]
resolver = "2"


[package]
name = "rblib"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/rblib"
repository = "https://github.com/flashbots/rblib"
description = "SDK for building ethereum compatible block builders"
exclude = [".github/"]

[lib]
doctest = false

[features]
default = ["optimism", "ethereum", "pipelines"]

optimism = [
  "op-alloy",
  "reth-optimism-node",
  "reth-optimism-chainspec",
  "reth-optimism-forks",
  "reth-node-builder?/op",
  "reth-payload-util",
]

ethereum = [
  "reth-ethereum-payload-builder",
  "reth-basic-payload-builder",
  "reth-ethereum/evm",
  "reth-ethereum/node",
]

pipelines = [
  "pipelines-macros",
  "tokio",
  "futures",
  "reth-transaction-pool",
  "reth-payload-builder",
  "reth-ethereum/evm",
  "reth-ethereum/node",
]

test-utils = [
  "nanoid",
  "tokio/full",
  "alloy-genesis",
  "rand",
  "reth-ipc",
  "reth-rpc-api",
  "serde_json",
  "reth-ethereum/test-utils",
  "reth-node-builder",
  "op-alloy?/network",
  "op-alloy?/rpc-types",
]

[dependencies]
# internal dependencies
pipelines-macros = { path = "src/pipelines/macros", optional = true }

# Common dependencies
alloy = "1.0.18"
alloy-evm = "0.14"
itertools = "0.14"
eyre = "0.6"
thiserror = { version = "2.0", default-features = false }
tracing = "0.1"
derive_more = { version = "2.0", features = ["deref", "from", "into"] }
smallvec = "1.15"
dashmap = "6.1"

futures = { version = "0.3", optional = true }
tokio = { version = "1.46", optional = true }

# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }

# ethereum dependencies (optional)
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }

# optimism dependencies (optional)
op-alloy = { version = "0.18", features = ["consensus"], optional = true }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }

# pipelines only
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }

# test-utils
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }

nanoid = { version = "0.4", optional = true }
alloy-genesis = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.9", optional = true }


[dev-dependencies]
nanoid = "0.4"
ctor = "0.4.2"
tokio = { version = "1.46", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
alloy-genesis = "1.0"
rand = "0.9"
serde_json = "1.0"
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", features = [
  "test-utils",
] }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }


[dev-dependencies.op-alloy]
version = "0.18"
features = ["network", "rpc-types"]

[dev-dependencies.reth-optimism-rpc]
git = "https://github.com/paradigmxyz/reth"
tag = "v1.5.1"
features = ["client"]

[lints.rust]
type_alias_bounds = "allow"

[lints.clippy]
tabs_in_doc_comments = "allow"
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
