[workspace]
members = [
  ".",       # The main rblib library
  "bin/op2",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/rblib"
repository = "https://github.com/flashbots/rblib"
exclude = [".github/"]

[package]
name = "rblib"
description = "SDK for building ethereum compatible block builders"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
doctest = false

[features]
default = ["optimism", "jemalloc"]

jemalloc = [
  "dep:tikv-jemallocator",
  "reth-origin/jemalloc",
  "reth-optimism-cli?/jemalloc",
]

jemalloc-prof = [
  "jemalloc",
  "tikv-jemallocator?/profiling",
  "reth-origin/jemalloc-prof",
]

optimism = [
  "op-alloy",
  "reth-optimism-node",
  "reth-optimism-chainspec",
  "reth-optimism-forks",
  "reth-node-builder/op",
  "reth-payload-util",
  "reth-optimism-cli",
  "rblib-tests-macros?/optimism",
]

test-utils = [
  "nanoid",
  "tokio/full",
  "alloy-genesis",
  "rand",
  "reth-ipc",
  "reth-rpc-api",
  "reth-ethereum/test-utils",
  "reth-optimism-rpc/client",
  "op-alloy?/network",
  "op-alloy?/rpc-types",
  "rblib-tests-macros",
]

[dependencies]
# internal dependencies
pipelines-macros = { path = "src/pipelines/macros" }

# Common dependencies
itertools = "0.14"
eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
derive_more = { version = "2.0", features = ["deref", "from", "into"] }
smallvec = "1.15"
dashmap = "6.1"
uuid = "1.17"
futures = { version = "0.3" }
tokio = { version = "1.46" }
serde = "1.0"

alloy-origin = { version = "1.0.18", package = "alloy", features = [
  "k256",
  "rpc-types-mev",
] }
alloy-evm = "0.14"

reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }

# Reth dependencies
reth-origin = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", package = "reth" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", features = [
  "node",
  "evm",
] }

# optimism dependencies (optional)
op-alloy = { version = "0.18", features = ["consensus"], optional = true }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }

# test-utils
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", optional = true }
rblib-tests-macros = { path = "src/test_utils/macros", optional = true }

nanoid = { version = "0.4", optional = true }
alloy-genesis = { version = "1.0", optional = true }
rand = { version = "0.9", optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
nanoid = "0.4"
ctor = "0.4.2"
tokio = { version = "1.46", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
alloy-genesis = "1.0"
rand = "0.9"
serde_json = "1.0"
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", features = [
  "test-utils",
] }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
rblib-tests-macros = { path = "src/test_utils/macros" }
rblib = { path = ".", features = ["test-utils"] }

[dev-dependencies.op-alloy]
version = "0.18"
features = ["network", "rpc-types"]

[dev-dependencies.reth-optimism-rpc]
git = "https://github.com/paradigmxyz/reth"
tag = "v1.5.1"
features = ["client"]

[lints.rust]
type_alias_bounds = "allow"

[lints.clippy]
tabs_in_doc_comments = "allow"
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
