[workspace]
members = [
  ".",                     # The main rblib library
  "bin/flashblocks",
  "src/pipelines/macros",
  "src/test_utils/macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
homepage = "https://github.com/flashbots/rblib"
repository = "https://github.com/flashbots/rblib"
authors = ["Flashbots <info@flashbots.net>", "Karim Agha <karim@flashbots.net>"]
exclude = [".github/"]

[workspace.lints.rust]
type_alias_bounds = "allow"

[workspace.lints.clippy]
tabs_in_doc_comments = "allow"
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"

[workspace.metadata.scripts]
lint = "cargo clippy --all-targets -- -D warnings"

[package]
name = "rblib"
description = "Modular SDK for building ethereum block builders."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true

[lib]
doctest = false

[features]
default = ["optimism", "jemalloc"]

jemalloc = [
  "dep:tikv-jemallocator",
  "reth-origin/jemalloc",
  "reth-optimism-cli?/jemalloc",
]

jemalloc-prof = [
  "jemalloc",
  "tikv-jemallocator?/profiling",
  "reth-origin/jemalloc-prof",
]

optimism = [
  "op-alloy",
  "reth-optimism-node",
  "reth-optimism-chainspec",
  "reth-optimism-forks",
  "reth-optimism-primitives",
  "reth-node-builder/op",
  "reth-payload-util",
  "reth-optimism-cli",
  "rblib-tests-macros?/optimism",
]

test-utils = [
  "nanoid",
  "tokio/full",
  "alloy-genesis",
  "rand",
  "reth-ipc",
  "reth-ethereum/test-utils",
  "reth-optimism-rpc/client",
  "rblib-tests-macros",
  "jsonrpsee-core",
  "tracing-subscriber",
  "ctor",
]

long-pipelines-syntax = []

[dependencies]
# internal dependencies
pipelines-macros = { path = "src/pipelines/macros" }

# Common dependencies
itertools = "0.14"
eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
derive_more = { version = "2.0", features = ["deref", "from", "into"] }
smallvec = "1.15"
dashmap = "6.1"
uuid = "1.17"
futures = "0.3"
tokio = "1.47"
tokio-stream = "0.1.17"
serde = "1.0"
jsonrpsee = "0.25.1"
parking_lot = "0.12"
metrics = "0.24.0"
metrics-derive = "0.1"

alloy-origin = { version = "1.0.23", package = "alloy", features = [
  "k256",
  "rpc-types-mev",
] }
alloy-evm = "0.18.2"
alloy-serde = "1.0.23"

reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

# Reth dependencies
reth-origin = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", package = "reth" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = [
  "node",
  "evm",
] }

# optimism dependencies (optional)
op-alloy = { version = "0.18.14", features = ["full"], optional = true }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }

# test-utils
rblib-tests-macros = { path = "src/test_utils/macros", optional = true }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", optional = true }
jsonrpsee-core = { version = "0.25.1", optional = true }
nanoid = { version = "0.4", optional = true }
alloy-genesis = { version = "1.0", default-features = false, optional = true }
rand = { version = "0.9", optional = true }
ctor = { version = "0.5", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
], optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
rblib = { path = ".", features = ["test-utils"] }

[patch.crates-io]
alloy-primitives = { git = "https://github.com/alloy-rs/core", rev = "8c5713c20e3ed08cf09634ea5cb696d7021002a8" }

[lints]
workspace = true
