[package]
name = "rblib-tests-macros"
description = "Internal helper macros for rblib testing infrastructure."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
exclude.workspace = true
publish = false

[lib]
doctest = false
proc-macro = true

[features]
default = []
optimism = []

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = { version = "1.0" }
paste = "1.0"
